--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-svgmin": "^2.2.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "vinyl-ftp": "^0.6.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
